# opencv-python-sample

./: 01_start.ipynb  02_colorspace.ipynb  03_geometry.ipynb  04_threshold.ipynb  05_smoothing.ipynb  06_morphology.ipynb  07_gradients.ipynb  08_canny-edge-detection.ipynb  09_contours.ipynb  10_histograms.ipynb  LICENSE  README.md  plot_util.py  pyproject.toml
